--- a/index.html
+++ b/index.html
@@ -1,149 +1,211 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Системное привлечение клиентов для офлайн-бизнеса</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Системное привлечение клиентов для офлайн-бизнеса — Андрей Понизов</title>
+  <meta name="description" content="Геомаркетинг, стратегические консультации и системное привлечение клиентов для офлайн-бизнеса. Бесплатная диагностика 15–20 минут." />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header class="header">
-  <div class="container header-inner">
-    <div class="logo">Андрей · Консультант</div>
-
-    <button class="nav-toggle" aria-label="Открыть меню" aria-expanded="false">
-      <span class="hamburger"></span>
-    </button>
-
-    <nav class="nav" id="mainNav" aria-label="Главная навигация">
-      <a href="#services">Услуги</a>
-      <a href="#geomarketing">Геомаркетинг</a>
-      <a href="#cases">Кейсы</a>
-      <a href="#consulting">Консультации</a>
-      <a href="#contacts">Контакты</a>
-    </nav>
-  </div>
-</header>
-
-<section class="hero">
-  <div class="container">
-    <h1>Системное привлечение клиентов для офлайн-бизнеса</h1>
-    <p class="hero-subtitle">
-      Помогаю бизнесу получать стабильный поток клиентов из своей локации —  
-      без хаотичной рекламы и пустых обещаний
-    </p>
-    <div class="hero-actions">
-      <button class="btn primary" id="diagnosticBtn">Бесплатная диагностика</button>
-      <button class="btn secondary" id="paidBtn">Платная консультация</button>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <div class="container">
-    <h2>Кто я</h2>
-    <p>
-      Меня зовут Андрей. Я консультант по привлечению клиентов для офлайн-бизнеса.
-      Работаю с бьюти, медициной, общепитом и сервисами, где важна локация и системный подход.
-    </p>
-    <p class="accent">
-      Без инфоцыганства. Без волшебных кнопок. С опорой на экономику бизнеса.
-    </p>
-  </div>
-</section>
-
-<section class="section gray">
-  <div class="container">
-    <h2>Для кого я работаю</h2>
-    <ul class="list">
-      <li>Офлайн-бизнес с привязкой к локации</li>
-      <li>Собственники и управленцы</li>
-      <li>Те, кому важна стабильность, а не разовый всплеск</li>
-      <li>Бизнес, который хочет понимать причины результата</li>
-    </ul>
-  </div>
-</section>
-
-<section id="geomarketing" class="section">
-  <div class="container">
-    <h2>Мой основной фокус</h2>
-    <p>
-      Геомаркетинг — это не «карты». Это система привлечения клиентов
-      из вашей зоны присутствия: от спроса до решения клиента.
-    </p>
-  </div>
-</section>
-
-<section id="services" class="section gray">
-  <div class="container">
-    <h2>Чем я могу быть полезен бизнесу</h2>
-    <div class="cards">
-      <div class="card">
-        <h3>Геомаркетинг</h3>
-        <p>Системная работа с картами, отзывами, контентом и аналитикой.</p>
-      </div>
-      <div class="card">
-        <h3>Усиление привлечения</h3>
-        <p>Рост заявок и клиентов без хаотичных экспериментов.</p>
-      </div>
-      <div class="card">
-        <h3>Консультации</h3>
-        <p>Разбор ситуации, стратегия и пошаговый план действий.</p>
+  <!-- Header / Navigation -->
+  <header class="header">
+    <div class="container header-inner">
+      <a class="logo" href="index.html">Андрей Понизов</a>
+      <nav class="nav">
+        <a href="services.html">Услуги и цены</a>
+        <a href="geomarketing.html">Геомаркетинг</a>
+        <a href="consulting.html">Консультации</a>
+        <a href="cases.html">Кейсы</a>
+        <a href="about.html">Обо мне</a>
+        <a href="extra.html">Дополнительные услуги</a>
+        <a href="contacts.html">Контакты</a>
+        <a href="reviews.html">Отзывы</a>
+        <a href="blog.html">Полезные статьи</a>
+      </nav>
+      <div class="header-actions">
+        <a class="btn small primary" href="contacts.html#diagnostics">Бесплатная диагностика</a>
+        <a class="btn small outline" href="consulting.html">Платная консультация</a>
       </div>
     </div>
-  </div>
-</section>
+  </header>
 
-<section id="consulting" class="section">
-  <div class="container">
-    <h2>Форматы работы</h2>
-    <div class="cards">
-      <div class="card">
-        <h3>Бесплатная диагностика</h3>
-        <p>15–20 минут. Выявляем ключевую проблему. Без стратегии.</p>
+  <!-- Hero -->
+  <main>
+    <section class="hero">
+      <div class="container hero-inner">
+        <div class="hero-left">
+          <h1>Системное привлечение клиентов для офлайн-бизнеса</h1>
+          <p class="lead">
+            Помогаю бизнесу получать стабильный поток клиентов из своей локации — без хаотичной рекламы и пустых обещаний.
+          </p>
+
+          <div class="hero-ctas">
+            <a class="btn primary large" href="contacts.html#diagnostics">Бесплатная диагностика</a>
+            <a class="btn outline large" href="consulting.html">Платная консультация</a>
+          </div>
+
+          <p class="muted small">Геомаркетинг · стратегические консультации · системный подход</p>
+        </div>
+
+        <div class="hero-right">
+          <!-- Placeholder for speaking head / image -->
+          <div class="card speaker">
+            <div class="speaker-photo" aria-hidden="true"></div>
+            <div>
+              <strong>Андрей</strong>
+              <div class="muted">Консультант по системному привлечению</div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="card">
-        <h3>Платная консультация</h3>
-        <p>20–30 минут. Глубокий разбор, стратегия и план действий.</p>
+    </section>
+
+    <!-- Кто я -->
+    <section class="section">
+      <div class="container">
+        <h2>Кто я</h2>
+        <p>
+          Меня зовут Андрей. Я консультант по привлечению клиентов для офлайн-бизнеса. Работаю с бьюти, медициной, общепитом и сервисами,
+          где клиенты приходят из конкретной локации. Моя задача — не «ещё одна реклама», а понятная и управляемая система привлечения.
+        </p>
+        <p class="accent">Без инфоцыганства. Без волшебных кнопок. С опорой на реальную экономику бизнеса.</p>
       </div>
+    </section>
+
+    <!-- Для кого -->
+    <section class="section gray">
+      <div class="container">
+        <h2>Для кого подойдёт моя работа</h2>
+        <ul class="grid-list">
+          <li>Офлайн-бизнес с привязкой к локации</li>
+          <li>Собственники и управленцы, которые хотят контроля</li>
+          <li>Те, кому важна стабильность, а не разовый всплеск</li>
+          <li>Готовые работать системно и менять процесс</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Фокус -->
+    <section class="section">
+      <div class="container">
+        <h2>Мой основной фокус</h2>
+        <p>
+          Геомаркетинг и системное привлечение клиентов. Я смотрю на привлечение как на систему:
+          локация → спрос → поведение → точки контакта → решение клиента.
+        </p>
+        <p class="muted small">
+          Геомаркетинг — это не просто карты. Это инструмент управления потоком клиентов.
+        </p>
+      </div>
+    </section>
+
+    <!-- Чем полезен -->
+    <section id="services-preview" class="section gray">
+      <div class="container">
+        <h2>Чем я могу быть полезен вашему бизнесу</h2>
+        <div class="cards">
+          <article class="card">
+            <h3>Геомаркетинг</h3>
+            <p>Системная работа с картами, отзывами, контентом и аналитикой. Цель — стабильный поток клиентов из вашей локации.</p>
+            <a class="link" href="geomarketing.html">Подробнее о геомаркетинге →</a>
+          </article>
+
+          <article class="card">
+            <h3>Усиление привлечения клиентов</h3>
+            <p>Рост заявок и клиентов путём приведения в порядок процессов и каналов, а не хаотичных акций.</p>
+            <a class="link" href="services.html">Услуги и цены →</a>
+          </article>
+
+          <article class="card">
+            <h3>Консультации</h3>
+            <p>Глубокий разбор, формирование стратегии и пошаговый план действий.</p>
+            <a class="link" href="consulting.html">Подробнее о консультациях →</a>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Как я работаю -->
+    <section class="section">
+      <div class="container">
+        <h2>Как я работаю</h2>
+        <ol class="process">
+          <li><strong>Диагностика</strong> — быстро выявляем узкое место (15–20 минут).</li>
+          <li><strong>Гипотезы и валидация</strong> — приоритизация и быстрые проверки.</li>
+          <li><strong>Стратегия</strong> — если нужно, формируем план действий.</li>
+          <li><strong>Контроль</strong> — метрики, корректировки, регулярная работа.</li>
+        </ol>
+        <p class="muted small">Я не даю универсальных «чеклистов» — работаю с данными и конкретикой бизнеса.</p>
+      </div>
+    </section>
+
+    <!-- Форматы -->
+    <section id="formats" class="section gray">
+      <div class="container">
+        <h2>Форматы работы</h2>
+        <div class="cards small">
+          <div class="card">
+            <h4>Бесплатная диагностика</h4>
+            <p>15–20 минут. Выявляем ключевую проблему. Без стратегии и плана.</p>
+            <a class="btn small primary" href="contacts.html#diagnostics">Записаться на диагностику</a>
+          </div>
+          <div class="card">
+            <h4>Платная консультация</h4>
+            <p>20–30 минут. Глубокий разбор, стратегия и пошаговый план. Цена — 10 000 ₽.</p>
+            <a class="btn small outline" href="consulting.html">Записаться на консультацию</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Кейсы тизер -->
+    <section id="cases" class="section">
+      <div class="container">
+        <h2>Кейсы — логика решений</h2>
+        <p>Я показываю не красивые цифры, а ход мысли и принятые решения.</p>
+        <a class="btn outline" href="cases.html">Смотреть кейсы</a>
+      </div>
+    </section>
+
+    <!-- Короткий блок про разницу -->
+    <section class="section gray">
+      <div class="container">
+        <h2>Важно: диагностика ≠ консультация</h2>
+        <p>
+          На диагностике мы понимаем, <strong>в чём проблема</strong>. На платной консультации — <strong>что с этим делать и как</strong>.
+        </p>
+      </div>
+    </section>
+
+    <!-- Контакт / микро-форма -->
+    <section id="contact-cta" class="section">
+      <div class="container">
+        <h2>Если хотите понять, что происходит с привлечением клиентов — начните с диагностики</h2>
+        <form id="microForm" class="micro-form" action="#" method="post">
+          <input name="name" type="text" placeholder="Ваше имя" required>
+          <input name="contact" type="text" placeholder="Телефон или Telegram" required>
+          <input name="note" type="text" placeholder="Коротко опишите задачу (1–2 строчки)">
+          <div class="micro-actions">
+            <button type="submit" class="btn primary">Отправить заявку</button>
+            <a class="btn outline" href="contacts.html">Полная страница контактов</a>
+          </div>
+          <p class="muted small">Не беру всех подряд. Сначала — диагностика.</p>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container footer-inner">
+      <div>© Андрей. Консультации и геомаркетинг</div>
+      <nav class="footer-nav">
+        <a href="policy.html">Политика конфиденциальности</a>
+      </nav>
     </div>
-  </div>
-</section>
+  </footer>
 
-<section id="cases" class="section gray">
-  <div class="container">
-    <h2>Кейсы</h2>
-    <p>
-      Я показываю не просто цифры, а логику решений и ход мышления.
-    </p>
-    <button class="btn secondary">Смотреть кейсы</button>
-  </div>
-</section>
-
-<section id="contacts" class="section">
-  <div class="container">
-    <h2>Начать с диагностики</h2>
-    <p>
-      Если хотите понять, что происходит с привлечением клиентов —
-      начните с бесплатной диагностики.
-    </p>
-
-    <form id="contactForm" class="form" aria-label="Форма записи на диагностику">
-      <input id="inputName" type="text" placeholder="Имя" required />
-      <input id="inputContact" type="tel" placeholder="Телефон или Telegram" required />
-      <button type="submit" class="btn primary">Записаться</button>
-      <p id="formMessage" class="form-message" aria-live="polite"></p>
-    </form>
-  </div>
-</section>
-
-<footer class="footer">
-  <div class="container">
-    <p>© Андрей. Консультации и геомаркетинг</p>
-  </div>
-</footer>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
