--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         <a href="reviews.html">Отзывы</a>
         <a href="blog.html">Полезные статьи</a>
       </nav>
+      <button class="burger" id="burger" aria-label="Открыть меню">
+  <span></span>
+  <span></span>
+  <span></span>
+</button>
       <div class="header-actions">
         <a class="btn small primary" href="contacts.html#diagnostics">Бесплатная диагностика</a>
         <a class="btn small outline" href="consulting.html">Платная консультация</a>
@@ -209,3 +214,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
