--- a/index.html
+++ b/index.html
@@ -1,217 +1,182 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Системное привлечение клиентов для офлайн-бизнеса — Андрей Понизов</title>
-  <meta name="description" content="Геомаркетинг, стратегические консультации и системное привлечение клиентов для офлайн-бизнеса. Бесплатная диагностика 15–20 минут." />
+  <meta charset="UTF-8">
+  <title>Андрей — системное привлечение клиентов</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Header / Navigation -->
-  <header class="header">
-    <div class="container header-inner">
-      <a class="logo" href="index.html">Андрей Понизов</a>
-      <nav class="nav">
-        <a href="services.html">Услуги и цены</a>
-        <a href="geomarketing.html">Геомаркетинг</a>
-        <a href="consulting.html">Консультации</a>
-        <a href="cases.html">Кейсы</a>
-        <a href="about.html">Обо мне</a>
-        <a href="extra.html">Дополнительные услуги</a>
-        <a href="contacts.html">Контакты</a>
-        <a href="reviews.html">Отзывы</a>
-        <a href="blog.html">Полезные статьи</a>
-      </nav>
-      <button class="burger" id="burger" aria-label="Открыть меню">
-  <span></span>
-  <span></span>
-  <span></span>
-</button>
-      <div class="header-actions">
-        <a class="btn small primary" href="contacts.html#diagnostics">Бесплатная диагностика</a>
-        <a class="btn small outline" href="consulting.html">Платная консультация</a>
+<!-- ================= HEADER ================= -->
+<header class="header">
+  <div class="container header-inner">
+
+    <a href="/" class="logo">Андрей</a>
+
+    <!-- DESKTOP NAV -->
+    <nav class="nav nav-desktop">
+      <a href="services.html">Услуги и цены</a>
+      <a href="geomarketing.html">Геомаркетинг</a>
+      <a href="consulting.html">Консультации</a>
+      <a href="cases.html">Кейсы</a>
+      <a href="reviews.html">Отзывы</a>
+      <a href="blog.html">Полезные статьи</a>
+      <a href="contacts.html">Контакты</a>
+    </nav>
+
+    <!-- BURGER -->
+    <button class="burger" id="burger" aria-label="Открыть меню">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+
+  </div>
+
+  <!-- MOBILE MENU -->
+  <nav class="nav nav-mobile" id="mobileMenu">
+    <a href="services.html">Услуги и цены</a>
+    <a href="geomarketing.html">Геомаркетинг</a>
+    <a href="consulting.html">Консультации</a>
+    <a href="cases.html">Кейсы</a>
+    <a href="reviews.html">Отзывы</a>
+    <a href="blog.html">Полезные статьи</a>
+    <a href="contacts.html">Контакты</a>
+  </nav>
+</header>
+
+<!-- ================= MAIN ================= -->
+<main>
+
+  <!-- HERO -->
+  <section class="hero">
+    <div class="container">
+      <h1>Системное привлечение клиентов для офлайн-бизнеса</h1>
+      <p class="lead">
+        Работаю с геомаркетингом, аналитикой и стратегией. Без инфоцыганства,
+        с опорой на цифры и реальную экономику бизнеса.
+      </p>
+
+      <div style="margin-top: 24px;">
+        <a href="consulting.html" class="btn primary">Записаться на диагностику</a>
+        <a href="services.html" class="btn outline">Услуги и цены</a>
       </div>
     </div>
-  </header>
+  </section>
 
-  <!-- Hero -->
-  <main>
-    <section class="hero">
-      <div class="container hero-inner">
-        <div class="hero-left">
-          <h1>Системное привлечение клиентов для офлайн-бизнеса</h1>
-          <p class="lead">
-            Помогаю бизнесу получать стабильный поток клиентов из своей локации — без хаотичной рекламы и пустых обещаний.
+  <!-- WHO I AM -->
+  <section class="section">
+    <div class="container">
+      <h2>Кто я и чем могу быть полезен бизнесу</h2>
+      <p class="lead">
+        Я консультант по системному привлечению клиентов для офлайн-бизнеса:
+        медицина, бьюти, общепит, локальные услуги.
+      </p>
+
+      <div class="cards">
+        <div class="card">
+          <h3>Геомаркетинг</h3>
+          <p class="muted">
+            Привожу клиентов через Яндекс Карты, 2GIS, отзывы и контент.
           </p>
-
-          <div class="hero-ctas">
-            <a class="btn primary large" href="contacts.html#diagnostics">Бесплатная диагностика</a>
-            <a class="btn outline large" href="consulting.html">Платная консультация</a>
-          </div>
-
-          <p class="muted small">Геомаркетинг · стратегические консультации · системный подход</p>
         </div>
 
-        <div class="hero-right">
-          <!-- Placeholder for speaking head / image -->
-          <div class="card speaker">
-            <div class="speaker-photo" aria-hidden="true"></div>
-            <div>
-              <strong>Андрей</strong>
-              <div class="muted">Консультант по системному привлечению</div>
-            </div>
-          </div>
+        <div class="card">
+          <h3>Усиление привлечения</h3>
+          <p class="muted">
+            Нахожу точки роста в существующих каналах и повышаю конверсию.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Консультации</h3>
+          <p class="muted">
+            Разбор бизнеса, стратегия и пошаговый план действий.
+          </p>
         </div>
       </div>
-    </section>
-
-    <!-- Кто я -->
-    <section class="section">
-      <div class="container">
-        <h2>Кто я</h2>
-        <p>
-          Меня зовут Андрей. Я консультант по привлечению клиентов для офлайн-бизнеса. Работаю с бьюти, медициной, общепитом и сервисами,
-          где клиенты приходят из конкретной локации. Моя задача — не «ещё одна реклама», а понятная и управляемая система привлечения.
-        </p>
-        <p class="accent">Без инфоцыганства. Без волшебных кнопок. С опорой на реальную экономику бизнеса.</p>
-      </div>
-    </section>
-
-    <!-- Для кого -->
-    <section class="section gray">
-      <div class="container">
-        <h2>Для кого подойдёт моя работа</h2>
-        <ul class="grid-list">
-          <li>Офлайн-бизнес с привязкой к локации</li>
-          <li>Собственники и управленцы, которые хотят контроля</li>
-          <li>Те, кому важна стабильность, а не разовый всплеск</li>
-          <li>Готовые работать системно и менять процесс</li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- Фокус -->
-    <section class="section">
-      <div class="container">
-        <h2>Мой основной фокус</h2>
-        <p>
-          Геомаркетинг и системное привлечение клиентов. Я смотрю на привлечение как на систему:
-          локация → спрос → поведение → точки контакта → решение клиента.
-        </p>
-        <p class="muted small">
-          Геомаркетинг — это не просто карты. Это инструмент управления потоком клиентов.
-        </p>
-      </div>
-    </section>
-
-    <!-- Чем полезен -->
-    <section id="services-preview" class="section gray">
-      <div class="container">
-        <h2>Чем я могу быть полезен вашему бизнесу</h2>
-        <div class="cards">
-          <article class="card">
-            <h3>Геомаркетинг</h3>
-            <p>Системная работа с картами, отзывами, контентом и аналитикой. Цель — стабильный поток клиентов из вашей локации.</p>
-            <a class="link" href="geomarketing.html">Подробнее о геомаркетинге →</a>
-          </article>
-
-          <article class="card">
-            <h3>Усиление привлечения клиентов</h3>
-            <p>Рост заявок и клиентов путём приведения в порядок процессов и каналов, а не хаотичных акций.</p>
-            <a class="link" href="services.html">Услуги и цены →</a>
-          </article>
-
-          <article class="card">
-            <h3>Консультации</h3>
-            <p>Глубокий разбор, формирование стратегии и пошаговый план действий.</p>
-            <a class="link" href="consulting.html">Подробнее о консультациях →</a>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <!-- Как я работаю -->
-    <section class="section">
-      <div class="container">
-        <h2>Как я работаю</h2>
-        <ol class="process">
-          <li><strong>Диагностика</strong> — быстро выявляем узкое место (15–20 минут).</li>
-          <li><strong>Гипотезы и валидация</strong> — приоритизация и быстрые проверки.</li>
-          <li><strong>Стратегия</strong> — если нужно, формируем план действий.</li>
-          <li><strong>Контроль</strong> — метрики, корректировки, регулярная работа.</li>
-        </ol>
-        <p class="muted small">Я не даю универсальных «чеклистов» — работаю с данными и конкретикой бизнеса.</p>
-      </div>
-    </section>
-
-    <!-- Форматы -->
-    <section id="formats" class="section gray">
-      <div class="container">
-        <h2>Форматы работы</h2>
-        <div class="cards small">
-          <div class="card">
-            <h4>Бесплатная диагностика</h4>
-            <p>15–20 минут. Выявляем ключевую проблему. Без стратегии и плана.</p>
-            <a class="btn small primary" href="contacts.html#diagnostics">Записаться на диагностику</a>
-          </div>
-          <div class="card">
-            <h4>Платная консультация</h4>
-            <p>20–30 минут. Глубокий разбор, стратегия и пошаговый план. Цена — 10 000 ₽.</p>
-            <a class="btn small outline" href="consulting.html">Записаться на консультацию</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Кейсы тизер -->
-    <section id="cases" class="section">
-      <div class="container">
-        <h2>Кейсы — логика решений</h2>
-        <p>Я показываю не красивые цифры, а ход мысли и принятые решения.</p>
-        <a class="btn outline" href="cases.html">Смотреть кейсы</a>
-      </div>
-    </section>
-
-    <!-- Короткий блок про разницу -->
-    <section class="section gray">
-      <div class="container">
-        <h2>Важно: диагностика ≠ консультация</h2>
-        <p>
-          На диагностике мы понимаем, <strong>в чём проблема</strong>. На платной консультации — <strong>что с этим делать и как</strong>.
-        </p>
-      </div>
-    </section>
-
-    <!-- Контакт / микро-форма -->
-    <section id="contact-cta" class="section">
-      <div class="container">
-        <h2>Если хотите понять, что происходит с привлечением клиентов — начните с диагностики</h2>
-        <form id="microForm" class="micro-form" action="#" method="post">
-          <input name="name" type="text" placeholder="Ваше имя" required>
-          <input name="contact" type="text" placeholder="Телефон или Telegram" required>
-          <input name="note" type="text" placeholder="Коротко опишите задачу (1–2 строчки)">
-          <div class="micro-actions">
-            <button type="submit" class="btn primary">Отправить заявку</button>
-            <a class="btn outline" href="contacts.html">Полная страница контактов</a>
-          </div>
-          <p class="muted small">Не беру всех подряд. Сначала — диагностика.</p>
-        </form>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <div class="container footer-inner">
-      <div>© Андрей. Консультации и геомаркетинг</div>
-      <nav class="footer-nav">
-        <a href="policy.html">Политика конфиденциальности</a>
-      </nav>
     </div>
-  </footer>
+  </section>
 
-  <script src="script.js"></script>
+  <!-- HOW I WORK -->
+  <section class="section gray">
+    <div class="container">
+      <h2>Как я работаю</h2>
+      <p class="lead">
+        Без обещаний «x10 за месяц». Работаю системно и честно.
+      </p>
+
+      <div class="cards">
+        <div class="card">
+          <h3>Диагностика</h3>
+          <p class="muted">
+            Выявляем ключевую проблему и узкое место бизнеса.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Стратегия</h3>
+          <p class="muted">
+            Формирую понятный план действий под конкретные цели.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Сопровождение</h3>
+          <p class="muted">
+            Помогаю внедрить решения и контролировать результат.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONSULTING -->
+  <section class="section">
+    <div class="container">
+      <h2>Форматы консультаций</h2>
+
+      <div class="cards">
+        <div class="card">
+          <h3>Бесплатная диагностика</h3>
+          <p class="muted">
+            15–20 минут. Понимание проблемы без стратегии и плана.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Платная консультация</h3>
+          <p class="muted">
+            20–30 минут. Глубокий разбор, стратегия и план действий.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA -->
+  <section class="section gray">
+    <div class="container">
+      <h2>Хотите понять, где теряются клиенты?</h2>
+      <p class="lead">
+        Запишитесь на бесплатную диагностику и получите честную оценку ситуации.
+      </p>
+
+      <a href="consulting.html" class="btn primary">Записаться на диагностику</a>
+    </div>
+  </section>
+
+</main>
+
+<!-- ================= FOOTER ================= -->
+<footer class="footer">
+  <div class="container">
+    <p>© Андрей, системное привлечение клиентов</p>
+  </div>
+</footer>
+
+<script src="script.js"></script>
 </body>
 </html>
-
