--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
 <!-- ================= HEADER ================= -->
+<!-- ============ HEADER (вставить целиком) ============ -->
 <header class="header">
   <div class="container header-inner">
 
@@ -21,12 +22,10 @@
       <a href="geomarketing.html">Геомаркетинг</a>
       <a href="consulting.html">Консультации</a>
       <a href="cases.html">Кейсы</a>
-      <a href="reviews.html">Отзывы</a>
-      <a href="blog.html">Полезные статьи</a>
       <a href="contacts.html">Контакты</a>
     </nav>
 
-    <!-- BURGER -->
+    <!-- BURGER BUTTON (обязательно id="burger") -->
     <button class="burger" id="burger" aria-label="Открыть меню">
       <span></span>
       <span></span>
@@ -35,17 +34,16 @@
 
   </div>
 
-  <!-- MOBILE MENU -->
-  <nav class="nav nav-mobile" id="mobileMenu">
+  <!-- MOBILE MENU (обязательно id="mobileMenu") -->
+  <nav class="nav nav-mobile" id="mobileMenu" aria-hidden="true">
     <a href="services.html">Услуги и цены</a>
     <a href="geomarketing.html">Геомаркетинг</a>
     <a href="consulting.html">Консультации</a>
     <a href="cases.html">Кейсы</a>
-    <a href="reviews.html">Отзывы</a>
-    <a href="blog.html">Полезные статьи</a>
     <a href="contacts.html">Контакты</a>
   </nav>
 </header>
+<!-- ============ END HEADER ============ -->
 
 <!-- ================= MAIN ================= -->
 <main>
@@ -180,3 +178,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
